Задача: Группировка пользователей по возрасту Main: Тесты; User: Класс пользователей.
Изменения:
(User.java)
* add(user) добавлен непосредственно в computeIfAbsent().
(Main.java)
* Удалены все комментарии;
* Замена переменных для наполнения списков -> инициализацию внутри списков;
* Изменён вывод данных для проверки.